--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div style="float:right;margin-left:15px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/DJDjrsGot54" frameborder="0" allowfullscreen></iframe>
 </div>
-<p> As I was handed my plate of chilli and potato, it surprised me how welcoming the people at the drop-in session were – afterall, I was a stranger eating their food.</p>
+<p> As I was handed my plate of chilli and potato, it surprised me how welcoming the people at the drop-in session were – after all, I was a stranger eating their food.</p>
 <p>They were fascinated, if not slightly weary, of my camera and the fact that somebody had taken an interest in them and their lives.</p>
 <p> One of the more unique and communal aspects about Rainbow of Hope is the number of helpers who either do or have relied on it in the past.</p>
 <p> The sense of community in the building was incredible as if somebody turned up late, there would be an automatic offer to share food or source more.</p>
@@ -191,7 +191,7 @@
   </div>
 
 <p>If anything can be concluded from my time eating and chatting with the homeless people in Cardiff, another attitude which has to change is that of the people who encounter the homeless every day and walk on by without a second thought.</p>
-<p>Helping does not necessarily mean rumaging around in your wallet for that £1.50 you know is laying around somewhere that "will probably go on alcohol or drugs" – helping can be directing a homeless person to the nearest help centre, buying them a £3 meal deal from one of the supermarkets, or just donating a pack of biscuits and some fruit to your local soup run. If that's too much, you can even report where they are to <a href="http://www.streetlink.org.uk/">Street Link</a> who will help connect them to local services.</p>
+<p>Helping does not necessarily mean rummaging around in your wallet for that £1.50 you know is laying around somewhere that "will probably go on alcohol or drugs" – helping can be directing a homeless person to the nearest help centre, buying them a £3 meal deal from one of the supermarkets, or just donating a pack of biscuits and some fruit to your local soup run. If that's too much, you can even report where they are to <a href="http://www.streetlink.org.uk/">Street Link</a> who will help connect them to local services.</p>
 <p>All too often we overlook homeless people, but we're forgetting that they are still people, and like anybody else, they deserve food and a roof over their head.</p>
 </section>
 
