--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
 <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 <div class="owl-carousel">
     <div> <img src="img/Slider/coffee0.jpg" alt="hot drinks" />Hot drinks being served</div>
-    <div> <img src="img/Slider/biscuits.JPG" alt="Plenty of biscuits" />Plenty of biscuits</div>
-    <div> <img src="img/Slider/doggy2.JPG" alt="One of the homeless dogs" />One of the homeless dogs</div>
+    <div> <img src="img/Slider/biscuits.jpg" alt="Plenty of biscuits" />Plenty of biscuits</div>
+    <div> <img src="img/Slider/doggy2.jpg" alt="One of the homeless dogs" />One of the homeless dogs</div>
     <div> <img src="img/Slider/fooood.jpg" alt="Posters of supermarket food ironically placed" />Posters of supermarket food ironically placed</div>
-    <div> <img src="img/Slider/helpers.JPG" alt="Two of the people who help at Rainbow of Hope" />Two of the people who help at Rainbow of Hope</div>
-   <div> <img src="img/Slider/next.JPG" alt="People walking passed the soup run to get ready for Saturday night" />People walking passed the soup run to get ready for Saturday night</div>
-  <div> <img src="img/Slider/yum.JPG" alt="Free hot food and milk" />Free hot food and milk</div>
+    <div> <img src="img/Slider/helpers.jpg" alt="Two of the people who help at Rainbow of Hope" />Two of the people who help at Rainbow of Hope</div>
+   <div> <img src="img/Slider/next.jpg" alt="People walking passed the soup run to get ready for Saturday night" />People walking passed the soup run to get ready for Saturday night</div>
+  <div> <img src="img/Slider/yum.jpg" alt="Free hot food and milk" />Free hot food and milk</div>
   </div>
 
 <p>If anything can be concluded from my time eating and chatting with the homeless people in Cardiff, another attitude which has to change is that of the people who encounter the homeless every day and walk on by without a second thought.</p>
