--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   </div>
 
 <p>If anything can be concluded from my time eating and chatting with the homeless people in Cardiff, another attitude which has to change is that of the people who encounter the homeless every day and walk on by without a second thought.</p>
-<p>Helping does not necessarily mean rummaging around in your wallet for that £1.50 you know is laying around somewhere that "will probably go on alcohol or drugs" – helping can be directing a homeless person to the nearest help centre, buying them a £3 meal deal from one of the supermarkets, or just donating a pack of biscuits and some fruit to your local soup run. If that's too much, you can even report where they are to <a href="http://www.streetlink.org.uk/">Street Link</a> who will help connect them to local services.</p>
+<p>Helping does not necessarily mean rumaging around in your wallet for that £1.50 you know is laying around somewhere that "will probably go on alcohol or drugs" – helping can be directing a homeless person to the nearest help centre, buying them a £3 meal deal from one of the supermarkets, or just donating a pack of biscuits and some fruit to your local soup run. If that's too much, you can even report where they are to <a href="http://www.streetlink.org.uk/">Street Link</a> who will help connect them to local services.</p>
 <p>All too often we overlook homeless people, but we're forgetting that they are still people, and like anybody else, they deserve food and a roof over their head.</p>
 </section>
 
